// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Accordion /> should have two different levels of headings 1`] = `
.c0 {
  margin: 0 0 1rem 0;
  color: #2f3b6c;
  font-weight: normal;
  font-size: 2.8rem;
  font-family: "Merriweather",serif;
  line-height: 1.25;
}

.c3 + .c2 {
  border-top: 1px solid #bbcadf;
}

.c6 {
  margin: 0 0 1rem 0;
  color: #2f3b6c;
  font-weight: 600;
  font-size: 1.8rem;
  font-family: "Open Sans",sans-serif;
  line-height: 1.25;
  margin: 2rem 0;
  padding: 0;
}

.c5 {
  position: relative;
  -webkit-transform: rotate(0);
  -ms-transform: rotate(0);
  transform: rotate(0);
  -webkit-transition: -webkit-transform 250ms linear;
  -webkit-transition: transform 250ms linear;
  transition: transform 250ms linear;
  margin-right: 1rem;
  color: #7598d6;
}

[aria-expanded="true"] .c5,
[aria-selected="true"] .c5 {
  -webkit-transform: rotate(90deg);
  -ms-transform: rotate(90deg);
  transform: rotate(90deg);
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  cursor: pointer;
}

.c4:hover,
.c4:focus,
.c4:focus-within,
.c4[aria-expanded="true"] {
  color: #3e486e;
}

.c7 {
  padding: 1.6rem;
  -webkit-animation: bcCCNc 0.35s ease-in;
  animation: bcCCNc 0.35s ease-in;
}

.c7 > *:first-child {
  margin-top: 0;
}

.c7 > *:last-child {
  margin-bottom: 0;
}

.c7.accordion__body--hidden {
  display: none;
}

.c1 {
  margin-bottom: 3.2rem;
}

<div>
  <h2
    class="c0"
  >
    titre 0
  </h2>
  <p>
    paragraphe 0
  </p>
  <div
    class="c1"
    data-accordion-component="Accordion"
  >
    <div
      class="c2 c3"
      data-accordion-component="AccordionItem"
    >
      <div
        aria-level="3"
        class="accordion__heading"
        data-accordion-component="AccordionItemHeading"
        role="heading"
      >
        <div
          aria-controls="accordion__panel-0"
          aria-disabled="false"
          aria-expanded="false"
          class="c4"
          data-accordion-component="AccordionItemButton"
          id="accordion__heading-0"
          role="button"
          tabindex="0"
        >
          <svg
            class="c5"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <polyline
              points="9 18 15 12 9 6"
            />
          </svg>
          <h1
            class="c6"
          >
            titre 1
          </h1>
        </div>
      </div>
      <div
        aria-hidden="true"
        aria-labelledby="accordion__heading-0"
        class="c7"
        data-accordion-component="AccordionItemPanel"
        hidden=""
        id="accordion__panel-0"
      >
        <p>
          paragraphe 1-1
        </p>
        <p>
          paragraphe 1-2
        </p>
      </div>
    </div>
    <div
      class="c2 c3"
      data-accordion-component="AccordionItem"
    >
      <div
        aria-level="3"
        class="accordion__heading"
        data-accordion-component="AccordionItemHeading"
        role="heading"
      >
        <div
          aria-controls="accordion__panel-1"
          aria-disabled="false"
          aria-expanded="false"
          class="c4"
          data-accordion-component="AccordionItemButton"
          id="accordion__heading-1"
          role="button"
          tabindex="0"
        >
          <svg
            class="c5"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <polyline
              points="9 18 15 12 9 6"
            />
          </svg>
          <h1
            class="c6"
          >
            titre 2
          </h1>
        </div>
      </div>
      <div
        aria-hidden="true"
        aria-labelledby="accordion__heading-1"
        class="c7"
        data-accordion-component="AccordionItemPanel"
        hidden=""
        id="accordion__panel-1"
      >
        <p>
          paragraphe 2-1
        </p>
        <p>
          paragraphe 2-2
        </p>
        <h3
          class="c0"
        >
          titre 2-1
        </h3>
      </div>
    </div>
    <div
      class="c2 c3"
      data-accordion-component="AccordionItem"
    >
      <div
        aria-level="3"
        class="accordion__heading"
        data-accordion-component="AccordionItemHeading"
        role="heading"
      >
        <div
          aria-controls="accordion__panel-2"
          aria-disabled="false"
          aria-expanded="false"
          class="c4"
          data-accordion-component="AccordionItemButton"
          id="accordion__heading-2"
          role="button"
          tabindex="0"
        >
          <svg
            class="c5"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <polyline
              points="9 18 15 12 9 6"
            />
          </svg>
          <h1
            class="c6"
          >
            titre 3
          </h1>
        </div>
      </div>
      <div
        aria-hidden="true"
        aria-labelledby="accordion__heading-2"
        class="c7"
        data-accordion-component="AccordionItemPanel"
        hidden=""
        id="accordion__panel-2"
      >
        <p>
          paragraphe 3-1
        </p>
      </div>
    </div>
  </div>
  <p>
    paragraphe 4
  </p>
</div>
`;

exports[`<Accordion /> should render all, siblings included 1`] = `
.c0 {
  margin: 0 0 1rem 0;
  color: #2f3b6c;
  font-weight: 600;
  font-size: 1.8rem;
  font-family: "Open Sans",sans-serif;
  line-height: 1.25;
}

.c3 + .c2 {
  border-top: 1px solid #bbcadf;
}

.c6 {
  margin: 0 0 1rem 0;
  color: #2f3b6c;
  font-weight: 600;
  font-size: 1.8rem;
  font-family: "Open Sans",sans-serif;
  line-height: 1.25;
  margin: 2rem 0;
  padding: 0;
}

.c5 {
  position: relative;
  -webkit-transform: rotate(0);
  -ms-transform: rotate(0);
  transform: rotate(0);
  -webkit-transition: -webkit-transform 250ms linear;
  -webkit-transition: transform 250ms linear;
  transition: transform 250ms linear;
  margin-right: 1rem;
  color: #7598d6;
}

[aria-expanded="true"] .c5,
[aria-selected="true"] .c5 {
  -webkit-transform: rotate(90deg);
  -ms-transform: rotate(90deg);
  transform: rotate(90deg);
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  cursor: pointer;
}

.c4:hover,
.c4:focus,
.c4:focus-within,
.c4[aria-expanded="true"] {
  color: #3e486e;
}

.c7 {
  padding: 1.6rem;
  -webkit-animation: bcCCNc 0.35s ease-in;
  animation: bcCCNc 0.35s ease-in;
}

.c7 > *:first-child {
  margin-top: 0;
}

.c7 > *:last-child {
  margin-bottom: 0;
}

.c7.accordion__body--hidden {
  display: none;
}

.c1 {
  margin-bottom: 3.2rem;
}

<div>
  <h5
    class="c0"
  >
    titre 0
  </h5>
  <p>
    paragraphe 0
  </p>
  <div
    class="c1"
    data-accordion-component="Accordion"
  >
    <div
      class="c2 c3"
      data-accordion-component="AccordionItem"
    >
      <div
        aria-level="3"
        class="accordion__heading"
        data-accordion-component="AccordionItemHeading"
        role="heading"
      >
        <div
          aria-controls="accordion__panel-3"
          aria-disabled="false"
          aria-expanded="false"
          class="c4"
          data-accordion-component="AccordionItemButton"
          id="accordion__heading-3"
          role="button"
          tabindex="0"
        >
          <svg
            class="c5"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <polyline
              points="9 18 15 12 9 6"
            />
          </svg>
          <h4
            class="c6"
          >
            titre 1
          </h4>
        </div>
      </div>
      <div
        aria-hidden="true"
        aria-labelledby="accordion__heading-3"
        class="c7"
        data-accordion-component="AccordionItemPanel"
        hidden=""
        id="accordion__panel-3"
      >
        <p>
          paragraphe 1-1
        </p>
        <p>
          paragraphe 1-2
        </p>
      </div>
    </div>
    <div
      class="c2 c3"
      data-accordion-component="AccordionItem"
    >
      <div
        aria-level="3"
        class="accordion__heading"
        data-accordion-component="AccordionItemHeading"
        role="heading"
      >
        <div
          aria-controls="accordion__panel-4"
          aria-disabled="false"
          aria-expanded="false"
          class="c4"
          data-accordion-component="AccordionItemButton"
          id="accordion__heading-4"
          role="button"
          tabindex="0"
        >
          <svg
            class="c5"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <polyline
              points="9 18 15 12 9 6"
            />
          </svg>
          <h4
            class="c6"
          >
            titre 2
          </h4>
        </div>
      </div>
      <div
        aria-hidden="true"
        aria-labelledby="accordion__heading-4"
        class="c7"
        data-accordion-component="AccordionItemPanel"
        hidden=""
        id="accordion__panel-4"
      >
        <p>
          paragraphe 2-1
        </p>
        <p>
          paragraphe 2-2
        </p>
        <h6
          class="c0"
        >
          titre 2-1
        </h6>
      </div>
    </div>
    <div
      class="c2 c3"
      data-accordion-component="AccordionItem"
    >
      <div
        aria-level="3"
        class="accordion__heading"
        data-accordion-component="AccordionItemHeading"
        role="heading"
      >
        <div
          aria-controls="accordion__panel-5"
          aria-disabled="false"
          aria-expanded="false"
          class="c4"
          data-accordion-component="AccordionItemButton"
          id="accordion__heading-5"
          role="button"
          tabindex="0"
        >
          <svg
            class="c5"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <polyline
              points="9 18 15 12 9 6"
            />
          </svg>
          <h4
            class="c6"
          >
            titre 3
          </h4>
        </div>
      </div>
      <div
        aria-hidden="true"
        aria-labelledby="accordion__heading-5"
        class="c7"
        data-accordion-component="AccordionItemPanel"
        hidden=""
        id="accordion__panel-5"
      >
        <p>
          paragraphe 3-1
        </p>
      </div>
    </div>
  </div>
  <p>
    paragraphe 4
  </p>
</div>
`;
